# schema_registry

./: README.md  docker-compose.yml  pyproject.toml
app/: consumer.py  producer.py  register_schema.py
core/: constants.py
schemas/: person_pb2.py
scripts/: compile_schema.sh
